# app/docs/v1_swagger.json
@@ -115,6 +115,41 @@
                 }
             }
         },
+        "/schedule/quick-generate": {
+            "post": {
+                "description": "快速生成一周内的排班",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "v1",
+                    "排班相关"
+                ],
+                "summary": "快速生成一周内的排班",
+                "parameters": [
+                    {
+                        "description": "快速生成排班参数",
+                        "name": "param",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models_v1.QuickGenerateIn"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/user/login-wechat": {
             "post": {
                 "description": "登陆微信",
@@ -279,6 +314,36 @@
                 "code": {
                     "type": "string",
                     "format": "string"
+                }
+            }
+        },
+        "models_v1.QuickGenerateIn": {
+            "type": "object",
+            "required": [
+                "date",
+                "room_id",
+                "service_id",
+                "store_id",
+                "user_id"
+            ],
+            "properties": {
+                "date": {
+                    "type": "string"
+                },
+                "room_id": {
+                    "type": "integer"
+                },
+                "service_category_id": {
+                    "type": "integer"
+                },
+                "service_id": {
+                    "type": "integer"
+                },
+                "store_id": {
+                    "type": "integer"
+                },
+                "user_id": {
+                    "type": "integer"
                 }
             }
         }
